v1.5.7
======
o Swap deprecated msigdbr function to get supported species

v1.5.6
======
o Remove tx_ids column from text file exported by edgeR (addressing https://github.com/csoneson/ARMOR/issues/109)

v1.5.5
======
o Adapt to the new output format of limma::plotMDS
o Adapt pandoc-citeproc check to work with pandoc 2.11

v1.5.4
======
o Specify tbb version 2020.2 based on issue with salmon in conda (https://twitter.com/dpryan79/status/1368116490801717251)

v1.5.3
======
o Update syntax based on suggestions from snakemake --lint
o Update software versions
o Use built-in cpm() function from edgeR

v1.5.2
======
o Fix pandoc version to 2.10 (thanks @carissableker, https://github.com/csoneson/ARMOR/pull/101)

v1.5.1
======
o Specify channel in environment_R.yaml

v1.5.0
======
o Transition to R 4.0
o Use convenience function from tximeta to create DGEList for DE

v1.4.0
======
o Add possibility to provide additional arguments to STAR and Salmon

v1.3.2
======
o Fix small bug in edgeR script, triggered when no gene sets were provided

v1.3.1
======
o Adjust code for the latest version 7.0.1 of the msigdbr R package
o Fix bug to make sure that camera is not run with an empty gene set list

v1.3.0
======
o Change CPM calculations in edgeR_dge.Rmd to account for average transcript length offsets, using the approach from csaw::calculateCPM()

v1.2.3
======
o Rename rules for clarity
o Add benchmarks directive

v1.2.2
======
o Add sticker to README

v1.2.1
======
o Change deprecated pandas.read_table to pandas.read_csv

v1.2.0
======
o Add possibility to use multiple cores for DRIMSeq and R package installation

v1.1.0
======
o Extend checks of inputs

v1.0.0
======
o Initial version