@@ -1,6 +1,7 @@
 v1.5.7
 ======
 o Swap deprecated msigdbr function to get supported species
+o Convert entrezid column to a vector if required (to allow saving to csv)
 
 v1.5.6
 ======
